# tzParser

./: .gitignore  LICENSE  README.md
.github/workflows/: msvc.yml  qt6.yml
data/: moment-timezone-data-meta-latest.json at develop · moment-moment-timezone.url  nayarsystems-posix_tz_db- Generates POSIX timezones strings.url  windows_timezones.txt
src/: CMakeLists.txt  TableRow.cpp  TableRow.h  TimeZone.cpp  TimeZone.h  main.cpp
src/ui/: MainWindow.cpp  MainWindow.h
src/util/: TimeUtils.cpp  TimeUtils.h
